# agentic-rag-platform

./: .env.example  .gitignore  Dockerfile  README.md  config.py  create_docs.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  llm_client.py  logging_setup.py  main.py  metrics.py  security.py
data/: create_docs.py
myfaiss/: chunks.json  create_index.py  docs.json  eval_retrieval.py  index.faiss  rag.py
myfastapi/: main.py
mylangchain/: calc.py  data_init.py  test.db  test_tool.py
myllm/: __init__.py  llm_client.py
redis/: memory.py  memory_store.py
reports/: .gitkeep  concurrency_batching_results.json  concurrency_batching_summary.md  day13_rag_eval_report.json  day13_rag_eval_report.md  day19_concurrency_batching_results.json  day19_concurrency_batching_summary.md  day21_stability_stress_results.json  day21_stability_stress_summary.md  day26_demo_ppt.md  day8_prefill_decode_vllm_summary.md  day8_ttft_results.json  day9_kv_cache_results.json  day9_kv_cache_summary.md  kv_cache_results.json  kv_cache_summary.md  metrics_events.csv  performance_final_results.json  performance_report.md  prefill_decode_summary.md  rag_eval_report.json  rag_eval_report.md  stability_stress_results.json  stability_stress_summary.md  ttft_results.json  weekly_metrics_report.csv
scripts/: api_endpoint_stress_test.py  concurrency_batching_experiment.py  day19_concurrency_batching_experiment.py  day21_stability_stress_test.py  day8_ttft_benchmark.py  day9_kv_cache_experiment.py  kv_cache_experiment.py  stability_stress_test.py  (+2 more)
(+113 files in other folders)
