[project]
name = "agentic-rag-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.5",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.1",
    "numpy>=2.2.6",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentic-rag-platform"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true